# DigitRecognitionMNIST

./: .gitignore  CMakeLists.txt  requirements.txt
notebooks/: cantidadDeDatos.ipynb  cantidadDeDatosYK-fold.ipynb  funciones.py  knn.ipynb  knnpesos.ipynb  parametrosIdeales.ipynb
notebooks/.ipynb_checkpoints/: cantidadDeDatos-checkpoint.ipynb  cantidadDeDatosYK-fold-checkpoint.ipynb  knn-checkpoint.ipynb  knnpesos-checkpoint.ipynb  parametrosIdeales-checkpoint.ipynb
src/: eigen.cpp  knn.cpp  knn.h  main_embind.cpp  metnum.cpp  pca.cpp  pca.h  types.h
web/: CMakeLists.txt  build.sh
